db vs trang chu

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -2,122 +2,334 @@
 <html xmlns:th="http://www.thymeleaf.org" th:replace="~{/layout/index :: dynamic(~{::main})}">
 
 <body>
-	<main class="main-content">
-		<div class="page-header-area">
-			<div class="container">
-				<div class="row">
-					<div class="col-12 text-center">
-						<div class="page-header-content">
-							<nav class="breadcrumb-area">
-								<ul class="breadcrumb">
-									<li>
-										<a href="/">Home</a>
-									</li>
-									<li class="breadcrumb-sep">/</li>
-									<li>About</li>
-								</ul>
-							</nav>
-							<h4 class="title">About</h4>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+<main class="main-content">
+    <div class="page-header-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <div class="page-header-content">
+                        <nav class="breadcrumb-area">
+                            <ul class="breadcrumb">
+                                <li>
+                                    <a href="/">Home</a>
+                                </li>
+                                <li class="breadcrumb-sep">/</li>
+                                <li>About</li>
+                            </ul>
+                        </nav>
+                        <h4 class="title">About</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
-		<section class="about-area">
-			<div class="container">
-				<div class="row align-items-center">
-					<div class="col-lg-6">
-						<div class="about-thumb">
-							<a href="javascript:(0);">
-								<img class="w-100" src="assets/img/about.png">
-							</a>
-						</div>
-					</div>
-					<div class="col-lg-6">
-						<div class="about-content">
-							<h4 class="title">Our company</h4>
-							<p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
-								velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam
-								aliquam quaerat
-								exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
-								consequatur?</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eu nisi ac mi malesuada
-								vestibulum. Phasellus tempor nunc eleifend cursus molestie. Mauris lectus arcu,
-								pellentesque at
-								sodales sit amet, condimentum id nunc. Donec ornare mattis suscipit. Praesent fermentum
-								accumsan
-								vulputate.</p>
-							<a class="btn-theme" href="javascript:(0);">read more</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
+    <section class="about-area">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6">
+                    <div class="about-thumb">
+                        <a href="javascript:(0);">
+                            <img class="w-100" src="assets/images/hehee.jpg">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="about-content">
+                        <h4 class="title">Our company</h4>
+                        <p>Con đường chinh phục Streetwear của thương hiệu GOTD được bắt đầu từ 2023 tại Việt Nam,
+                            xuất phát ý tưởng về một thương hiệu Việt mang văn hóa đường phố. Với những kinh nghiệm gói
+                            ghém từ thương hiệu tiền thân The Yars Shop,
+                            anh Khoa Sen đã đã bắt đầu cuộc hành trình DirtyCoins cùng những người bạn GenZ đầy nhiệt
+                            huyết và sáng tạo.</p>
+                        <p>Không quá ồn ào hay phô trương, ‘GOTD’
+                            tượng trưng cho những giá trị nguyên bản nhất của cuộc sống: đó là hiện thực gai góc của
+                            những ‘đồng tiền xương máu’, của giá trị lao động đầy mồ hôi, bụi bẩn và nước mắt
+                            . GOTD trở thành một thương hiệu của tinh thần thời trang mạnh mẽ, táo bạo nhưng vẫn gần gũi
+                            và dễ tiếp cận rộng rãi. Không dừng lại ở đó, DirtyCoins muốn vượt qua giới hạn của một
+                            thương hiệu thời trang
+                            đơn thuần và trở thành một biểu tượng về văn hóa và phong cách sống của những con người trẻ
+                            tuổi..</p>
+                        <a class="btn-theme" href="javascript:(0);">read more</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
-		<section class="team-area">
-			<div class="container pt-2">
-				<div class="row">
-					<div class="col-lg-12 m-auto">
-						<div class="section-title section-title-style-two text-center">
-							<h2 class="sub-title">HAND WORK</h2>
-							<h2 class="title">Us</h2>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-sm-6 col-md-4 col-lg-4">
-						<div class="team-item">
-							<div class="inner-content">
-								<div class="thumb">
-									<a href="javascript:(0);">
-										<img class="w-100" src="assets/img/team/me2.jpg">
-									</a>
-								</div>
-								<div class="content">
-									<h4 class="title">
-										<a href="javascript:(0);">Me</a>
-									</h4>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-6 col-md-4 col-lg-4">
-						<div class="team-item">
-							<div class="inner-content">
-								<div class="thumb">
-									<a href="javascript:(0);">
-										<img class="w-100" src="assets/img/team/we.jpg">
-									</a>
-								</div>
-								<div class="content">
-									<h4 class="title">
-										<a href="javascript:(0);">We</a>
-									</h4>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-6 col-md-4 col-lg-4">
-						<div class="team-item">
-							<div class="inner-content">
-								<div class="thumb">
-									<a href="javascript:(0);">
-										<img class="w-100" src="assets/img/team/bangai.jpg">
-									</a>
-								</div>
-								<div class="content">
-									<h4 class="title">
-										<a href="javascript:(0);">She</a>
-									</h4>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-	</main>
+    <section class="team-area">
+        <div class="container pt-2">
+            <div class="row">
+                <div class="col-lg-12 m-auto">
+                    <div class="section-title section-title-style-two text-center">
+                        <h2 class="sub-title">HAND WORK</h2>
+                        <h2 class="title">Us</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 col-md-4 col-lg-4">
+                    <div class="team-item">
+                        <div class="inner-content">
+                            <div class="thumb">
+                                <a href="javascript:(0);">
+                                    <img class="w-100" src="assets/img/team/me2.jpg">
+                                </a>
+                            </div>
+                            <div class="content">
+                                <h4 class="title">
+                                    <a href="javascript:(0);">Me</a>
+                                </h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-4">
+                    <div class="team-item">
+                        <div class="inner-content">
+                            <div class="thumb">
+                                <a href="javascript:(0);">
+                                    <img class="w-100" style="width: 100px" src="assets/images/TuongLai.jpg">
+                                </a>
+                            </div>
+                            <div class="content">
+                                <h4 class="title">
+                                    <a href="javascript:(0);">We</a>
+                                </h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-4">
+                    <div class="team-item">
+                        <div class="inner-content">
+                            <div class="thumb">
+                                <a href="javascript:(0);">
+                                    <img class="w-100" src="assets/img/team/bangai.jpg">
+                                </a>
+                            </div>
+                            <div class="content">
+                                <h4 class="title">
+                                    <a href="javascript:(0);">She</a>
+                                </h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="about-area">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6">
+                    <div class="about-thumb">
+                        <a href="javascript:(0);">
+                            <img class="w-100" src="assets/images/2017.webp">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="about-content">
+                        <h4 class="title">2017</h4>
+                        <p>Thương hiệu GOTD chính thức ra đời, với cửa hàng đầu tiên tại đường Điện Biên Phủ, quận Bình
+                            Thạnh, Thành phố Hồ Chí Minh.</p>
+                        <p> Cửa hàng thứ 2 tại đường Bắc Hải, quận 10, thành phố Hồ Chí Minh0.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="about-area">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6">
+                    <div class="about-thumb">
+                        <a href="javascript:(0);">
+                            <img class="w-100" src="assets/images/2018.webp">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="about-content">
+                        <h4 class="title">2018</h4>
+                        <p>Cửa hàng thứ 3 tại quận 1, thành phố Hồ Chí Minh.</p>
+                        <p>Cửa hàng thứ 4 tại đường phố Huế, quận Hai Bà Trưng, Hà Nội.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="about-area">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6">
+                    <div class="about-thumb">
+                        <a href="javascript:(0);">
+                            <img class="w-100" src="assets/images/2019.webp">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="about-content">
+                        <h4 class="title">2019</h4>
+                        <p>Cửa hàng thứ 5 tại số 15 Phan Trung, Biên Hoà.</p>
+                        <p>Cửa hàng thứ 6 tại 49 Hồ Đắc Di, Hà Nội.</p>
+                        <p>Cửa hàng thứ 7 tại Nguyễn Sơn, quận Tân Phú, thành phố Hồ Chí Minh.</p>
+                        <p> Cửa hàng thứ 8 tại Khúc Thừa Dụ, quận Cầu Giây, Hà Nội.</p>
+                        <p> Cửa hàng thứ 9 tại 52 Mậu Thân, Thành phố Cần Thơ.</p>
+                        <p> Cửa hàng thứ 10 tại 41 Quang Trung, Gò Vấp, Thành phố Hồ Chí Minh.</p>
+                        <p> Cửa hàng thứ 11 tại Lý Tự Trọng, Quận 1, Thành phố Hồ Chí Minh.</p>
+                        <p> Cửa hàng thứ 12 tại Lê Lai, Quận 1, Thành phố Hồ Chí Minh.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="about-area">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6">
+                    <div class="about-thumb">
+                        <a href="javascript:(0);">
+                            <img class="w-100" src="assets/images/2020.webp">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="about-content">
+                        <h4 class="title">2020</h4>
+                        <p>Cửa hàng thứ 13 được mở tại Vincom Bà Triệu, quận hai Bà Trưng, Hà Nội.
+                            Chúng tôi tự hào được vinh danh Thương hiệu Thời trang Được Yêu thích Nhất tại Lễ trao giải
+                            WECHOICE AWARD năm 2020.
+                            Là thương hiệu thời trang Việt Nam đầu tiên đạt 1 triệu người theo dõi trên 2 nền tảng mạng
+                            xã hội Facebook và Instagram.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="about-area">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6">
+                    <div class="about-thumb">
+                        <a href="javascript:(0);">
+                            <img class="w-100" src="assets/images/2021.webp">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="about-content">
+                        <h4 class="title">2021</h4>
+                        <p>Trải qua giai đoạn giãn cách xã hội suốt hơn 4 tháng do đại dịch Covid-19, để duy trì hoạt
+                            động ở giai đoạn khó khăn này kèm với nhiều thay đổi và biến chuyển khó lường của thị
+                            trường, nên lãnh đạo công ty quyết định rút gọn số lượng cửa hàng còn 8.
+                            Giai đoạn cuối 2021 cho đến Quý 2 - 2022 là giai đoạn chúng tôi biến chuyển tích cực về mặt
+                            cơ cấu sản phẩm và tuyển dụng nhân sự.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="about-area">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6">
+                    <div class="about-thumb">
+                        <a href="javascript:(0);">
+                            <img class="w-100" src="assets/images/2022.webp">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="about-content">
+                        <h4 class="title">2022</h4>
+                        <p>Khai trương cửa hàng thứ 9 tại 28 Yersin, Bình Dương.</p>
+                        <p>Cửa hàng Flagship tại 561 Sư Vạn Hạnh được đầu tư với một diện mạo hoàn toàn mới.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="team-area">
+        <div class="container pt-2">
+            <div class="row">
+                <div class="col-lg-12 m-auto">
+                    <div class="section-title section-title-style-two text-center">
+                        <h2 class="sub-title">Với sứ mệnh “GOTD là nơi thể hiện cái tôi và đóng góp giá trị cho văn hoá thời trang đường phố” chúng tôi đã nâng tầm thương hiệu dựa trên những giá trị cốt lõi và bền vững nhất, hướng đến đến mục tiêu trở thành TOP 1 VIETNAMESE STREETWEAR BRAND.</h2>
+                        <h2 class="title">GOTD</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 col-md-4 col-lg-4">
+                    <div class="team-item">
+                        <div class="inner-content">
+                            <div class="thumb">
+                                <a href="javascript:(0);">
+                                </a>
+                            </div>
+                            <div class="content">
+                                <h4 class="title">
+
+                                </h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-4">
+                    <div class="team-item">
+                        <div class="inner-content">
+                            <div class="thumb">
+                                <a href="javascript:(0);">
+                                    <img class="w-100" style="width: 100px" src="assets/images/vision-1.webp">
+                                </a>
+                            </div>
+                            <div class="content">
+                                <h4 class="title">
+                                    <a href="javascript:(0);">We</a>
+                                </h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-4">
+                    <div class="team-item">
+                        <div class="inner-content">
+                            <div class="thumb">
+                                <a href="javascript:(0);">
+
+                                </a>
+                            </div>
+                            <div class="content">
+                                <h4 class="title">
+
+                                </h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <br>
+            <br>
+            <div class="row">
+                <div class="col-lg-12 m-auto">
+                    <div class="section-title section-title-style-two text-center">
+                        <h6>Chúng tôi khuyến khích sự sáng tạo không ngừng của từng thành viên trong doanh nghiệp, giải quyết việc làm cho hơn hàng trăm nhân sự mỗi năm với môi trường làm việc năng động, đội ngũ đoàn kết và đầy nhiệt huyết.</h6>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 m-auto">
+                    <div class="section-title section-title-style-two text-center">
+                        <h6>Những sản phẩm của DirtyCoins mang đậm dấu ấn kết hợp giữa văn hóa phương Tây và Phương Đông, xác lập một ngôn ngữ sáng tạo rất riêng, đầy mạo hiểm và mới mẻ. Chất liệu cảm hứng được DirtyCoins chắt lọc từ sự đa sắc, đa diện của dòng chảy cuộc sống hàng ngày; pha trộn cùng cảm hứng nghệ thuật đương đại để tạo nên một tiểu vùng văn hóa rất riêng của DirtyCoins.</h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
 </body>
 
 </html>
