--- a/src/main/resources/templates/order/detail.html
+++ b/src/main/resources/templates/order/detail.html
@@ -1,148 +1,184 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" th:replace="~{/layout/index :: dynamic(~{::main})}">
 <body>
-	<main class="main-content">
-		<div class="page-header-area">
-			<div class="container">
-				<div class="row">
-					<div class="col-12 text-center">
-						<div class="page-header-content">
-							<nav class="breadcrumb-area">
-								<ul class="breadcrumb">
-									<li>
-										<a href="/">Trang chủ</a>
-									</li>
-									<li class="breadcrumb-sep">/</li>
-									<li>Giỏ hàng</li>
-								</ul>
-							</nav>
-							<h4 class="title">Thông tin mua hàng</h4>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="container my-3" th:object="${order}">
-			<div class="account-form-wrap" style="padding: 0; box-shadow: none;">
-				<div class="login-form">
-					<div class="text-white p-3"  style="background-color: #f27474;">THÔNG TIN MUA HÀNG</div>
-					<div class="row mt-2 mx-2">
-						<div class="form-group col-sm-4">
-							<label class="form-label">Mã mua:</label>
-							<input th:field="*{id}" class="form-control" readonly>
-						</div>
-						<div class="form-group col-sm-4">
-							<label class="form-label">Tên người đặt:</label>
-							<input th:field="*{account.username}" class="form-control" readonly>
-						</div>
-						<div class="form-group col-sm-4">
-							<label class="form-label">Ngày đặt:</label>
-							<input th:field="*{ngayDatHang}" class="form-control" readonly>
-						</div>
-						<div class="form-group col-sm-12 mb-3">
-							<label class="form-label">Địa chỉ mua hàng:</label>
+<main class="main-content">
+    <div class="page-header-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <div class="page-header-content">
+                        <nav class="breadcrumb-area">
+                            <ul class="breadcrumb">
+                                <li>
+                                    <a href="/">Trang chủ</a>
+                                </li>
+                                <li class="breadcrumb-sep">/</li>
+                                <li>Giỏ hàng</li>
+                            </ul>
+                        </nav>
+                        <h4 class="title">Thông tin mua hàng</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container my-3" th:object="${order}">
+        <div class="account-form-wrap" style="padding: 0; box-shadow: none;">
+            <div class="login-form">
+                <div class="text-white p-3" style="background-color: #f27474;">THÔNG TIN MUA HÀNG</div>
+                <div class="row mt-2 mx-2">
+                    <div class="form-group col-sm-4">
+                        <label class="form-label">Mã mua:</label>
+                        <input th:field="*{id}" class="form-control" readonly>
+                    </div>
+                    <div class="form-group col-sm-4">
+                        <label class="form-label">Tên người đặt:</label>
+                        <input th:field="*{account.username}" class="form-control" readonly>
+                    </div>
+                    <div class="form-group col-sm-4">
+                        <label class="form-label">Ngày đặt:</label>
+                        <input th:field="*{ngayDatHang}" class="form-control" readonly>
+                    </div>
+                    <div class="form-group col-sm-12 mb-3">
+                        <label class="form-label">Địa chỉ mua hàng:</label>
 
-								<div th:text="*{tinh + ', ' + huyen + ', ' + xa + ', ' + dcChiTiet}"
-									 class="form-control" readonly></div>
-
-
-						</div>
-					</div>
-				</div>
-			</div>
-			<section class="product-area shopping-cart-area">
-				<div class="row my-3">
-					<div class="col-12">
-						<div class="text-white p-3" style="background-color: #f27474;">THÔNG TIN ĐẶT HÀNG</div>
-						<div class="shopping-cart-wrap">
-							<div class="cart-table table-responsive">
-								<table class="table" >
-									<thead>
-									<tr>
-
-										<th class="indecor-product-name">Sản phẩm</th>
-										<th class="indecor-product-price">Size</th>
-										<th class="indecor-product-price">Màu sắc</th>
-										<th class="indecor-product-quantity">Số Lượng</th>
-										<th class="indecor-product-price">Giá</th>
-										<th class="indecor-product-subtotal">Tổng tiền</th>
-										<th th:if="${order.trangThai == 4}"> </th>
-									</tr>
-									</thead>
-									<tbody>
-									<tr th:each="detail : ${order.chiTietDonHangList}"  th:object="${detail}" >
-										<td class="indecor-product-thumbnail" style="width:200px">
-											<img class="w-25" th:src="@{|/assets/images/${detail.chiTietSanPham.sanPham.image[0].ma}|}"  />
-										[[${detail.chiTietSanPham.sanPham.ten}]]</td>
-										<td class="align-middle name" th:text="${detail.chiTietSanPham.kichCo.name}"></td>
-										<td class="align-middle name" th:text="${detail.chiTietSanPham.mauSac.name}"></td>
-										<td class="align-middle name" th:text="${detail.soLuong}"></td>
-										<td class="align-middle price">[[${#numbers.formatDecimal(detail.donGia,0,'COMMA',2,'POINT')}]]</td>
-										<td class="align-middle price">[[${#numbers.formatDecimal(detail.donGia * detail.soLuong,0,'COMMA',2,'POINT')}]]</td>
-										<td th:if="${order.trangThai == 4}">
-											<a type="button" class="rating-button" data-bs-toggle="modal" th:attr="data-bs-target='#sizeGuideModal' + ${detail.chiTietSanPham.sanPham.ma}">
-												<span class="star">&#9733;</span> Đánh giá
-											</a>
-										</td>
+                        <div th:text="*{tinh + ', ' + huyen + ', ' + xa + ', ' + dcChiTiet}"
+                             class="form-control" readonly></div>
 
 
-									</tr>
-									</tbody>
-								</table>
-							</div>
-						</div>
-					</div>
-				</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <section class="product-area shopping-cart-area">
+            <div class="row my-3">
+                <div class="col-12">
+                    <div class="text-white p-3" style="background-color: #f27474;">THÔNG TIN ĐẶT HÀNG</div>
+                    <div class="shopping-cart-wrap">
+                        <div class="cart-table table-responsive">
+                            <!--								<table class="table" >-->
+                            <!--									<thead>-->
+                            <!--									<tr>-->
 
-				<div th:each="detail : ${order.chiTietDonHangList}" th:object="${detail}" th:id="'sizeGuideModal' + ${detail.chiTietSanPham.sanPham.ma}" class="modal fade" tabindex="-1" aria-labelledby="sizeGuideModalLabel" aria-hidden="true">
-						<div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg">
-							<div class="modal-content">
-								<div class="modal-header">
-									<h5 class="modal-title" id="addressModalLabel">Đánh giá sản phẩm</h5>
-								</div>
-								<div class="modal-header">
-									<a target="_blank" th:href="@{|/product/detail/${detail.chiTietSanPham.sanPham.ma}|}">
-										<img style="width: 60px;height: 60px;font-weight: bold " th:src="@{|/assets/images/${detail.chiTietSanPham.sanPham.image[0].ma}|}"  />
-										[[${detail.chiTietSanPham.sanPham.ten}]] X[[${detail.soLuong}]]
-									</a>
-								</div>
-								<div class="modal-body">
-									<form action="#">
-										<div class="row">
-											<div class="col-md-12">
-												Chất lượng sản phẩm: <span ng-repeat="star in stars" ng-click="setStar(star)" style="cursor: pointer;">
-                               					<i class="fa" ng-class="{'fa-star': star <= rating, 'fa-star-o': star > rating}" style="color: #ffd43b; font-size: 15px"></i></span>
-											</div>
-											<br><br><br>
-											<div class="col-md-12">
-												<div class="form-group">
-													<label for="for_comment">Bình luận</label>
-													<textarea id="for_comment" ng-model="formRate.comment" class="form-control" rows="7" placeholder="Hãy chia sẻ những điều bạn thích về sản phẩm này với những người mua khác nhé"></textarea>
-												</div>
-											</div>
-										</div>
-									</form>
-								</div>
-								<div class="modal-footer">
-									<div class="card-header text-center">
-										<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
-										<a th:attr="ng-click='Reviews(\'' + *{chiTietSanPham.sanPham.ma} + '\', user)'">
-											<button class="btn btn-danger">Gửi đánh giá</button>
-										</a>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
+                            <!--										<th class="indecor-product-name">Sản phẩm</th>-->
+                            <!--										<th class="indecor-product-price">Size</th>-->
+                            <!--										<th class="indecor-product-price">Màu sắc</th>-->
+                            <!--										<th class="indecor-product-quantity">Số Lượng</th>-->
+                            <!--										<th class="indecor-product-price">Giá</th>-->
+                            <!--										<th class="indecor-product-subtotal">Tổng tiền</th>-->
+                            <!--										<th th:if="${order.trangThai == 4}"> </th>-->
+                            <!--									</tr>-->
+                            <!--									</thead>-->
+                            <!--									<tbody>-->
+                            <tr th:each="detail : ${order.chiTietDonHangList}" th:object="${detail}">
+                                <div class="row">
+                                    <div class="col-1">
+                                        <img th:src="@{|/assets/images/${detail.chiTietSanPham.sanPham.image[0].ma}|}"/>
 
-			</section>
-			<a th:href="@{/order/list}" class="btn-theme pull-right my-2">Quay lại giỏ hàng</a>
-		</div>
+                                    </div>
+                                    <div class="col-10" style="display: flex;align-items: center;">
+                                        [[${detail.chiTietSanPham.sanPham.ten}]]
+                                        <br>
+                                       Phân loại hàng: Size - [[${detail.chiTietSanPham.kichCo.name}]], Màu sắc
+                                        - [[${detail.chiTietSanPham.mauSac.name}]]
+										<br>
+										x[[${detail.soLuong}]]
+                                    </div>
+                                    <div class="col-1"
+                                         style="color: red;display: flex;align-items: center;justify-content: center">
+                                            [[${#numbers.formatDecimal(detail.donGia *
+                                            detail.soLuong,0,'COMMA',2,'POINT')}]]
+                                    </div>
+
+                                </div>
+                                <div style="float:right;">
+                                    <td th:if="${order.trangThai == 4}">
+                                        <a type="button" class="rating-button" data-bs-toggle="modal"
+                                           th:attr="data-bs-target='#sizeGuideModal' + ${detail.chiTietSanPham.sanPham.ma}">
+                                            <span class="star">&#9733;</span> Đánh giá
+                                        </a>
+                                    </td>
+                                </div>
+                                <hr>
+                            </tr>
+                            <div style="float:right; width: 30%">
+                                <br>
+                                <div style="float: left">Tổng tiền: </div>
+                                <div style="float: right">[[${order.tongTien}+${order.tienGiam}]]</div>
+                                <br>
+                                <div style="float: left">Giảm giá: </div>
+                                <div style="float: right">[[${order.tienGiam}]]</div>
+                                <br>
+                                <div style="float: left">Thành tiền: </div>
+                                <div style="float: right">[[${order.tongTien}]]</div>
+                                <br>
+                            </div>
+                            <!--									</tbody>-->
+                            <!--								</table>-->
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div th:each="detail : ${order.chiTietDonHangList}" th:object="${detail}"
+                 th:id="'sizeGuideModal' + ${detail.chiTietSanPham.sanPham.ma}" class="modal fade" tabindex="-1"
+                 aria-labelledby="sizeGuideModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="addressModalLabel">Đánh giá sản phẩm</h5>
+                        </div>
+                        <div class="modal-header">
+                            <a target="_blank" th:href="@{|/product/detail/${detail.chiTietSanPham.sanPham.ma}|}">
+                                <img style="width: 60px;height: 60px;font-weight: bold "
+                                     th:src="@{|/assets/images/${detail.chiTietSanPham.sanPham.image[0].ma}|}"/>
+                                [[${detail.chiTietSanPham.sanPham.ten}]] X[[${detail.soLuong}]]
+                            </a>
+                        </div>
+                        <div class="modal-body">
+                            <form action="#">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        Chất lượng sản phẩm: <span ng-repeat="star in stars" ng-click="setStar(star)"
+                                                                   style="cursor: pointer;">
+                               					<i class="fa"
+                                                   ng-class="{'fa-star': star <= rating, 'fa-star-o': star > rating}"
+                                                   style="color: #ffd43b; font-size: 15px"></i></span>
+                                    </div>
+                                    <br><br><br>
+                                    <div class="col-md-12">
+                                        <div class="form-group">
+                                            <label for="for_comment">Bình luận</label>
+                                            <textarea id="for_comment" ng-model="formRate.comment" class="form-control"
+                                                      rows="7"
+                                                      placeholder="Hãy chia sẻ những điều bạn thích về sản phẩm này với những người mua khác nhé"></textarea>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <div class="card-header text-center">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
+                                <a th:attr="ng-click='Reviews(\'' + *{chiTietSanPham.sanPham.ma} + '\', user)'">
+                                    <button class="btn btn-danger">Gửi đánh giá</button>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
 
 
 
+            <a title="Hủy đơn hàng" class="btn-theme pull-right my-2" th:if="${order.trangThai == 0}" th:href="@{|/order/cancel/${order.id}|}">Hủy đơn hàng</a>
+
+        <a th:href="@{/order/list}" class="btn-theme pull-right my-2">Quay lại giỏ hàng</a>
+    </div>
 
 
-	</main>
+</main>
 </body>
 </html>
