--- a/src/main/resources/templates/cart/checkout.html
+++ b/src/main/resources/templates/cart/checkout.html
@@ -3,8 +3,29 @@
 
 <body>
 	<main class="main-content">
+		<div class="page-header-area">
+			<div class="container">
+				<div class="row">
+					<div class="col-12 text-center">
+						<div class="page-header-content">
+							<nav class="breadcrumb-area">
+								<ul class="breadcrumb">
+									<li>
+										<a href="/">Trang chủ</a>
+									</li>
+									<li class="breadcrumb-sep">/</li>
+									<li>Thanh toán</li>
+								</ul>
+							</nav>
+							<h4 class="title">Thanh toán</h4>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 		<section class="product-area product-information-area">
 			<div class="container">
+
 				<div class="product-information">
 					<div class="row">
 						<div class="edit-checkout-head">
@@ -20,7 +41,11 @@
 						</div>
 						<div class="col-lg-7">
 							<div class="edit-checkout-information">
-
+								<div class="row justify-content-center">
+									<div class="col-md-6">
+										<h5 class="text-center">Thông tin nhận hàng</h5>
+									</div>
+								</div>
 								<div class="edit-checkout-form">
 									<div class="row row-gutter-12">
 										<div class="col-lg-6">
@@ -85,40 +110,11 @@
 													<option th:each="dis : ${mgg}" th:value="${dis.ma}"  th:text="${dis.ma+ ' - Giá trị: ' + dis.gtd + ' - Số lượng: ' + dis.sl}"></option>
 												</select>
 
-
 										</div>
-<!--										<div class="col-12">-->
-<!--											<div class="titel-ptgiao-hang" style="background-color: #f1f1f1;margin: 20px 0px 20px 0px;padding: 5px 20px 5px 20px;">-->
-<!--												<p style="color: black; font-size: 23px; font-weight: 700">PHƯƠNG THỨC THANH TOÁN</p>-->
-<!--											</div>-->
-<!--											<div class="row" style="padding: 0; margin: 0">-->
-<!--												<div class="col-sm-2">-->
-<!--													<input class="form-check-input" type="radio" name="Paymentmethods" value="" aria-label="Checkbox for following text input">-->
-<!--												</div>-->
-<!--												<div class="col-sm-10">-->
-<!--													<p style="color: black">Thanh toán trực tiếp khi giao hàng</p>-->
-<!--												</div>-->
-<!--											</div>-->
-<!--											<div class="row" style="padding: 0; margin: 0">-->
-<!--												<div class="col-sm-2">-->
-<!--													<input class="form-check-input" type="radio" name="Paymentmethods" value="" aria-label="Checkbox for following text input">-->
-<!--												</div>-->
-<!--												<div class="col-sm-10">-->
-<!--													<p style="color: black">Thanh toán bằng Thẻ quốc tế / Thẻ nội địa / QR Code</p>-->
-<!--												</div>-->
-<!--											</div>-->
-<!--											<div class="row" style="padding: 0; margin: 0">-->
-<!--												<div class="col-sm-2">-->
-<!--													<input class="form-check-input" type="radio" name="Paymentmethods" value="" aria-label="Checkbox for following text input">-->
-<!--												</div>-->
-<!--												<div class="col-sm-10">-->
-<!--													<p style="color: black">Thanh toán bằng ví MoMo</p>-->
-<!--												</div>-->
-<!--											</div>-->
-<!--										</div>-->
 										<div class="col-12" style="margin-top: 20px">
 											<div class="btn-box">
 												<button class="btn-shipping" ng-click="gioHang.purchase()">Xác nhận</button>
+												<button class="btn-vnpay" ng-click="gioHang.getPaymentUrl()">VN Pay</button>
 												<a class="btn-return" th:href="@{/cart/view}">Giỏ hàng</a>
 											</div>
 										</div>
@@ -128,6 +124,11 @@
 							</div>
 						</div>
 						<div class="col-lg-5">
+							<div class="row justify-content-center">
+								<div class="col-md-6">
+									<h5 class="text-center">Thông tin đơn hàng</h5>
+								</div>
+							</div>
 							<div class="shipping-cart-subtotal-wrapper">
 								<div class="shipping-cart-subtotal">
 									<div class="shipping-cart-item" ng-repeat="item in cartItems">
