--- a/src/main/resources/templates/product/detail.html
+++ b/src/main/resources/templates/product/detail.html
@@ -326,7 +326,7 @@
                                 <div class="product-item">
                                     <div class="inner-content">
                                         <div class="product-thumb">
-                                            <a th:href="@{|/product/detail/${p.id}|}">
+                                            <a th:href="@{|/product/detail/${p.sanPham.ma}|}">
                                                 <img class="product-item m-auto d-block"
                                                      th:src="@{|/assets/images/${p.sanPham.image[0].ma}|}">
                                             </a>
@@ -334,10 +334,10 @@
                                         <div class="product-desc">
                                             <div class="product-info">
                                                 <h4 class="title">
-                                                    <a th:href="@{|/product/detail/${p.id}|}">[[${p.sanPham.ten}]]</a>
+                                                    <a th:href="@{|/product/detail/${p.sanPham.ma}|}">[[${p.sanPham.ten}]]</a>
                                                 </h4>
                                                 <div class="prices">
-                                                    <span class="price">$[[${#numbers.formatDecimal(p.giaBan,0,'COMMA',2,'POINT')}]]</span>
+                                                    <span class="price">$[[${#numbers.formatDecimal(p.giaBan,0,'COMMA',0,'POINT')}]]</span>
                                                 </div>
                                             </div>
                                         </div>
