--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -3578,6 +3578,25 @@ h2:hover {
   line-height: 60px;
   font-weight: 500;
 }
+.product-information .edit-checkout-information .edit-checkout-form .btn-box .btn-vnpay {
+  cursor: pointer;
+  display: inline-block;
+  background-color: #005aa9;
+  background-clip: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  border: 1px transparent solid;
+  border-radius: 5px;
+  color: white;
+  padding: 0;
+  text-align: center;
+  position: relative;
+  width: 183px;
+  height: 60px;
+  font-size: 13px;
+  line-height: 60px;
+  font-weight: 500;
+}
 .product-information .edit-checkout-information .edit-checkout-form .btn-box .btn-shipping:hover {
   background-color: #ff502c;
   color: #fff;
